--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.tercatech.jtsocket</groupId>
   <artifactId>jtsocket</artifactId>
@@ -7,6 +7,42 @@
   <version>1.0-SNAPSHOT</version>
   <name>jtsocket</name>
   <url>http://tercatech.com</url>
+  <build>
+    <plugins>
+      <plugin>
+	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-shade-plugin</artifactId>
+	<version>2.4.3</version>
+	<configuration>
+	    <filters>
+	      <filter>
+		<artifact>*:*</artifact>
+		<excludes>
+		  <exclude>META-INF/*.SF</exclude>
+		  <exclude>META-INF/*.DSA</exclude>
+		  <exclude>META-INF/*.RSA</exclude>
+		</excludes>
+	      </filter>
+	    </filters>
+	  <archive>
+	    <manifest>
+	    </manifest>
+	  </archive>
+	  <descriptorRefs>
+	    <descriptorRef>jar-with-dependencies</descriptorRef>
+	  </descriptorRefs>
+	</configuration>
+	<executions>
+	  <execution>
+	    <phase>package</phase>
+	    <goals>
+	      <goal>shade</goal>
+	    </goals>
+	  </execution>
+	</executions>
+      </plugin>
+    </plugins>
+  </build>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
